projects/compiler/test/typechecker/match/error_expr_empty_block.abra
val x = match 123 {
  _ => {}
}
